[tool.poetry]
name = 'symbol-sdk-python'
version = '3.1.0'
description = 'Symbol SDK'
authors = ['Symbol Contributors <contributors@symbol.dev>']
maintainers = ['Symbol Contributors <contributors@symbol.dev>']
license = 'MIT'

readme = 'README.md'

packages = [{ include = 'symbolchain' }]

repository = 'https://github.com/symbol/symbol/tree/main/sdk/python'

keywords = ['symbol', 'sdk', 'Symbol SDK']

classifiers = ['Programming Language :: Python :: 3.9', 'Programming Language :: Python :: 3.10', 'Programming Language :: Python :: 3.11']

[tool.poetry.dependencies]
python = "^3.9"
