cmake_minimum_required(VERSION 3.23)
project(tests.catapult)

add_subdirectory(api)
add_subdirectory(cache)
add_subdirectory(cache_core)
add_subdirectory(cache_db)
add_subdirectory(cache_tx)
add_subdirectory(chain)
add_subdirectory(config)
add_subdirectory(consumers)
add_subdirectory(crypto)
add_subdirectory(crypto_voting)
add_subdirectory(deltaset)
add_subdirectory(disruptor)
add_subdirectory(extensions)
add_subdirectory(handlers)
add_subdirectory(io)
add_subdirectory(ionet)
add_subdirectory(keylink)
add_subdirectory(local)
add_subdirectory(model)
add_subdirectory(net)
add_subdirectory(observers)
add_subdirectory(plugins)
add_subdirectory(state)
add_subdirectory(subscribers)
add_subdirectory(thread)
add_subdirectory(tree)
add_subdirectory(utils)
add_subdirectory(validators)
